[package]
name = "rlpi"
version = "0.1.0"
authors = ["lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
clap = "2.33.3"
chrono = "0.4"
regex = "1"
memoffset = "0.6.4"

[[bin]]
name="job_mon"
path="src/pgsjc/job_mon.rs"

[[bin]]
name="handling_sigtstp"
path="src/pgsjc/handling_sigtstp.rs"

[[bin]]
name="orphaned_pgrp_sighup"
path="src/pgsjc/orphaned_pgrp_sighup.rs"

[[bin]]
name="t_setpriority"
path="src/procpri/t_setpriority.rs"

[[bin]]
name="rlimit_nproc"
path="src/procres/rlimit_nproc.rs"

[[bin]]
name="daemon_sighup"
path="src/daemons/daemon_sighup.rs"

[[bin]]
name="simple_pipe"
path="src/pipes/simple_pipe.rs"

[[bin]]
name="pipe_sync"
path="src/pipes/pipe_sync.rs"

[[bin]]
name="pipe_ls_wc"
path="src/pipes/pipe_ls_wc.rs"

[[bin]]
name="popen_glob"
path="src/pipes/popen_glob.rs"

[[bin]]
name="fifo_seqnum_server"
path="src/pipes/fifo_seqnum_server.rs"

[[bin]]
name="fifo_seqnum_client"
path="src/pipes/fifo_seqnum_client.rs"

[[bin]]
name="svmsg_create"
path="src/svmsg/svmsg_create.rs"

[[bin]]
name="svmsg_send"
path="src/svmsg/svmsg_send.rs"

[[bin]]
name="svmsg_receive"
path="src/svmsg/svmsg_receive.rs"

[[bin]]
name="svmsg_rm"
path="src/svmsg/svmsg_rm.rs"

[[bin]]
name="svmsg_chqbytes"
path="src/svmsg/svmsg_chqbytes.rs"

[[bin]]
name="svmsg_ls"
path="src/svmsg/svmsg_ls.rs"

[[bin]]
name="svmsg_file_server"
path="src/svmsg/svmsg_file_server.rs"

[[bin]]
name="svmsg_file_client"
path="src/svmsg/svmsg_file_client.rs"