[package]
name = "rlpi"
version = "0.1.0"
authors = ["lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
clap = "2.33.3"
chrono = "0.4"
regex = "1"
memoffset = "0.6.4"

[[bin]]
name="job_mon"
path="src/pgsjc/job_mon.rs"

[[bin]]
name="handling_sigtstp"
path="src/pgsjc/handling_sigtstp.rs"

[[bin]]
name="orphaned_pgrp_sighup"
path="src/pgsjc/orphaned_pgrp_sighup.rs"

[[bin]]
name="t_setpriority"
path="src/procpri/t_setpriority.rs"

[[bin]]
name="rlimit_nproc"
path="src/procres/rlimit_nproc.rs"

[[bin]]
name="daemon_sighup"
path="src/daemons/daemon_sighup.rs"

[[bin]]
name="simple_pipe"
path="src/pipes/simple_pipe.rs"

[[bin]]
name="pipe_sync"
path="src/pipes/pipe_sync.rs"

[[bin]]
name="pipe_ls_wc"
path="src/pipes/pipe_ls_wc.rs"

[[bin]]
name="popen_glob"
path="src/pipes/popen_glob.rs"

[[bin]]
name="fifo_seqnum_server"
path="src/pipes/fifo_seqnum_server.rs"

[[bin]]
name="fifo_seqnum_client"
path="src/pipes/fifo_seqnum_client.rs"

[[bin]]
name="svmsg_create"
path="src/svmsg/svmsg_create.rs"

[[bin]]
name="svmsg_send"
path="src/svmsg/svmsg_send.rs"

[[bin]]
name="svmsg_receive"
path="src/svmsg/svmsg_receive.rs"

[[bin]]
name="svmsg_rm"
path="src/svmsg/svmsg_rm.rs"

[[bin]]
name="svmsg_chqbytes"
path="src/svmsg/svmsg_chqbytes.rs"

[[bin]]
name="svmsg_ls"
path="src/svmsg/svmsg_ls.rs"

[[bin]]
name="svmsg_file_server"
path="src/svmsg/svmsg_file_server.rs"

[[bin]]
name="svmsg_file_client"
path="src/svmsg/svmsg_file_client.rs"

[[bin]]
name="svsem_demo"
path="src/svsem/svsem_demo.rs"

[[bin]]
name="svsem_mon"
path="src/svsem/svsem_mon.rs"

[[bin]]
name="svsem_setall"
path="src/svsem/svsem_setall.rs"

[[bin]]
name="svsem_op"
path="src/svsem/svsem_op.rs"

[[bin]]
name="t_setsid"
path="src/pgsjc/t_setsid.rs"

[[bin]]
name="t_fpathconf"
path="src/syslim/t_fpathconf.rs"

[[bin]]
name="strtime"
path="src/time/strtime.rs"

[[bin]]
name="signalfd_sigval"
path="src/signals/signalfd_sigval.rs"

[[bin]]
name="demo_inotify"
path="src/inotify/demo_inotify.rs"

[[bin]]
name="t_sigaltstack"
path="src/signals/t_sigaltstack.rs"

[[bin]]
name="t_dirbasename"
path="src/dirs_links/t_dirbasename.rs"

[[bin]]
name="disc_sighup"
path="src/pgsjc/disc_sighup.rs"

[[bin]]
name="catch_sighup"
path="src/pgsjc/catch_sighup.rs"

[[bin]]
name="child_status"
path="src/procexec/child_status.rs"

[[bin]]
name="svshm_xfr_reader"
path="src/svshm/svshm_xfr_reader.rs"

[[bin]]
name="svshm_xfr_writer"
path="src/svshm/svshm_xfr_writer.rs"

[[bin]]
name="script"
path="src/pty/script.rs"

[[bin]]
name="demo_sigwinch"
path="src/tty/demo_sigwinch.rs"

[[bin]]
name="test_tty_functions"
path="src/tty/test_tty_functions.rs"

[[bin]]
name="no_echo"
path="src/tty/no_echo.rs"

[[bin]]
name="t_kill"
path="src/signals/t_kill.rs"

[[bin]]
name="t_stat"
path="src/files/t_stat.rs"

[[bin]]
name="seek_io"
path="src/fileio/seek_io.rs"

[[bin]]
name="mmcat"
path="src/mmap/mmcat.rs"

[[bin]]
name="t_mmap"
path="src/mmap/t_mmap.rs"

[[bin]]
name="anon_mmap"
path="src/mmap/anon_mmap.rs"

[[bin]]
name="t_mprotect"
path="src/vmem/t_mprotect.rs"

[[bin]]
name="memlock"
path="src/vmem/memlock.rs"

[[bin]]
name="pmsg_unlink"
path="src/pmsg/pmsg_unlink.rs"

[[bin]]
name="pmsg_create"
path="src/pmsg/pmsg_create.rs"

[[bin]]
name="pmsg_getattr"
path="src/pmsg/pmsg_getattr.rs"

[[bin]]
name="pmsg_send"
path="src/pmsg/pmsg_send.rs"

[[bin]]
name="pmsg_receive"
path="src/pmsg/pmsg_receive.rs"

[[bin]]
name="mq_notify_sig"
path="src/pmsg/mq_notify_sig.rs"