[package]
name = "rlpi"
version = "0.1.0"
authors = ["lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
clap = "2.33.3"
chrono = "0.4"
regex = "1"
memoffset = "0.6.4"

[[bin]]
name="job_mon"
path="src/pgsjc/job_mon.rs"

[[bin]]
name="handling_sigtstp"
path="src/pgsjc/handling_sigtstp.rs"

[[bin]]
name="orphaned_pgrp_sighup"
path="src/pgsjc/orphaned_pgrp_sighup.rs"

[[bin]]
name="t_setpriority"
path="src/procpri/t_setpriority.rs"

[[bin]]
name="rlimit_nproc"
path="src/procres/rlimit_nproc.rs"

[[bin]]
name="daemon_sighup"
path="src/daemons/daemon_sighup.rs"

[[bin]]
name="simple_pipe"
path="src/pipes/simple_pipe.rs"

[[bin]]
name="pipe_sync"
path="src/pipes/pipe_sync.rs"

[[bin]]
name="pipe_ls_wc"
path="src/pipes/pipe_ls_wc.rs"

[[bin]]
name="popen_glob"
path="src/pipes/popen_glob.rs"

[[bin]]
name="fifo_seqnum_server"
path="src/pipes/fifo_seqnum_server.rs"

[[bin]]
name="fifo_seqnum_client"
path="src/pipes/fifo_seqnum_client.rs"

[[bin]]
name="svmsg_create"
path="src/svmsg/svmsg_create.rs"

[[bin]]
name="svmsg_send"
path="src/svmsg/svmsg_send.rs"

[[bin]]
name="svmsg_receive"
path="src/svmsg/svmsg_receive.rs"

[[bin]]
name="svmsg_rm"
path="src/svmsg/svmsg_rm.rs"

[[bin]]
name="svmsg_chqbytes"
path="src/svmsg/svmsg_chqbytes.rs"

[[bin]]
name="svmsg_ls"
path="src/svmsg/svmsg_ls.rs"

[[bin]]
name="svmsg_file_server"
path="src/svmsg/svmsg_file_server.rs"

[[bin]]
name="svmsg_file_client"
path="src/svmsg/svmsg_file_client.rs"

[[bin]]
name="svsem_demo"
path="src/svsem/svsem_demo.rs"

[[bin]]
name="svsem_mon"
path="src/svsem/svsem_mon.rs"

[[bin]]
name="svsem_setall"
path="src/svsem/svsem_setall.rs"

[[bin]]
name="svsem_op"
path="src/svsem/svsem_op.rs"

[[bin]]
name="t_setsid"
path="src/pgsjc/t_setsid.rs"

[[bin]]
name="t_fpathconf"
path="src/syslim/t_fpathconf.rs"

[[bin]]
name="t_sysconf"
path="src/syslim/t_sysconf.rs"

[[bin]]
name="strtime"
path="src/time/strtime.rs"

[[bin]]
name="calendar_time"
path="src/time/calendar_time.rs"

[[bin]]
name="show_time"
path="src/time/show_time.rs"

[[bin]]
name="process_time"
path="src/time/process_time.rs"

[[bin]]
name="signalfd_sigval"
path="src/signals/signalfd_sigval.rs"

[[bin]]
name="demo_inotify"
path="src/inotify/demo_inotify.rs"

[[bin]]
name="t_sigaltstack"
path="src/signals/t_sigaltstack.rs"

[[bin]]
name="t_dirbasename"
path="src/dirs_links/t_dirbasename.rs"

[[bin]]
name="disc_sighup"
path="src/pgsjc/disc_sighup.rs"

[[bin]]
name="catch_sighup"
path="src/pgsjc/catch_sighup.rs"

[[bin]]
name="child_status"
path="src/procexec/child_status.rs"

[[bin]]
name="svshm_xfr_reader"
path="src/svshm/svshm_xfr_reader.rs"

[[bin]]
name="svshm_xfr_writer"
path="src/svshm/svshm_xfr_writer.rs"

[[bin]]
name="script"
path="src/pty/script.rs"

[[bin]]
name="demo_sigwinch"
path="src/tty/demo_sigwinch.rs"

[[bin]]
name="test_tty_functions"
path="src/tty/test_tty_functions.rs"

[[bin]]
name="no_echo"
path="src/tty/no_echo.rs"

[[bin]]
name="t_kill"
path="src/signals/t_kill.rs"

[[bin]]
name="t_stat"
path="src/files/t_stat.rs"

[[bin]]
name="t_umask"
path="src/files/t_umask.rs"

[[bin]]
name="t_chown"
path="src/files/t_chown.rs"

[[bin]]
name="seek_io"
path="src/fileio/seek_io.rs"

[[bin]]
name="mmcat"
path="src/mmap/mmcat.rs"

[[bin]]
name="t_mmap"
path="src/mmap/t_mmap.rs"

[[bin]]
name="anon_mmap"
path="src/mmap/anon_mmap.rs"

[[bin]]
name="t_mprotect"
path="src/vmem/t_mprotect.rs"

[[bin]]
name="memlock"
path="src/vmem/memlock.rs"

[[bin]]
name="pmsg_unlink"
path="src/pmsg/pmsg_unlink.rs"

[[bin]]
name="pmsg_create"
path="src/pmsg/pmsg_create.rs"

[[bin]]
name="pmsg_getattr"
path="src/pmsg/pmsg_getattr.rs"

[[bin]]
name="pmsg_send"
path="src/pmsg/pmsg_send.rs"

[[bin]]
name="pmsg_receive"
path="src/pmsg/pmsg_receive.rs"

[[bin]]
name="mq_notify_sig"
path="src/pmsg/mq_notify_sig.rs"

[[bin]]
name="psem_create"
path="src/psem/psem_create.rs"

[[bin]]
name="psem_unlink"
path="src/psem/psem_unlink.rs"

[[bin]]
name="psem_wait"
path="src/psem/psem_wait.rs"

[[bin]]
name="psem_post"
path="src/psem/psem_post.rs"

[[bin]]
name="psem_getvalue"
path="src/psem/psem_getvalue.rs"

[[bin]]
name="thread_incr_psem"
path="src/psem/thread_incr_psem.rs"

[[bin]]
name="pshm_create"
path="src/pshm/pshm_create.rs"

[[bin]]
name="pshm_write"
path="src/pshm/pshm_write.rs"

[[bin]]
name="pshm_read"
path="src/pshm/pshm_read.rs"

[[bin]]
name="pshm_unlink"
path="src/pshm/pshm_unlink.rs"

[[bin]]
name="t_flock"
path="src/filelock/t_flock.rs"

[[bin]]
name="i_fcntl_locking"
path="src/filelock/i_fcntl_locking.rs"

[[bin]]
name="t_system"
path="src/procexec/t_system.rs"

[[bin]]
name="fork_stdio_buf"
path="src/procexec/fork_stdio_buf.rs"

[[bin]]
name="exit_handlers"
path="src/procexec/exit_handlers.rs"

[[bin]]
name="fork_sig_sync"
path="src/procexec/fork_sig_sync.rs"

[[bin]]
name="fork_file_sharing"
path="src/procexec/fork_file_sharing.rs"

[[bin]]
name="t_fork"
path="src/procexec/t_fork.rs"

[[bin]]
name="t_nanosleep"
path="src/timers/t_nanosleep.rs"

[[bin]]
name="timed_read"
path="src/timers/timed_read.rs"

[[bin]]
name="real_timer"
path="src/timers/real_timer.rs"

[[bin]]
name="demo_timerd"
path="src/timers/demo_timerfd.rs"

[[bin]]
name="t_sigsuspend"
path="src/signals/t_sigsuspend.rs"

[[bin]]
name="sig_sender"
path="src/signals/sig_sender.rs"

[[bin]]
name="intquit"
path="src/signals/intquit.rs"

[[bin]]
name="ouch"
path="src/signals/ouch.rs"

[[bin]]
name="t_unlink"
path="src/dirs_links/t_unlink.rs"

[[bin]]
name="xattr_view"
path="src/xattr/xattr_view.rs"

[[bin]]
name="display_env"
path="src/proc/display_env.rs"

[[bin]]
name="modify_env"
path="src/proc/modify_env.rs"

[[bin]]
name="idshow"
path="src/proccred/idshow.rs"

[[bin]]
name="t_uname"
path="src/sysinfo/t_uname.rs"

[[bin]]
name="simple_thread"
path="src/threads/simple_thread.rs"

[[bin]]
name="thread_incr"
path="src/threads/thread_incr.rs"

[[bin]]
name="thread_incr_mutex"
path="src/threads/thread_incr_mutex.rs"

[[bin]]
name="thread_multijoin"
path="src/threads/thread_multijoin.rs"

[[bin]]
name="strerror_test"
path="src/threads/strerror_test.rs"

[[bin]]
name="thread_cancel"
path="src/threads/thread_cancel.rs"

[[bin]]
name="us_xfr_sv"
path="src/sockets/us_xfr_sv.rs"

[[bin]]
name="us_xfr_cl"
path="src/sockets/us_xfr_cl.rs"

[[bin]]
name="ud_ucase_sv"
path="src/sockets/ud_ucase_sv.rs"

[[bin]]
name="ud_ucase_cl"
path="src/sockets/ud_ucase_cl.rs"

[[bin]]
name="i6d_ucase_sv"
path="src/sockets/i6d_ucase_sv.rs"

[[bin]]
name="i6d_ucase_cl"
path="src/sockets/i6d_ucase_cl.rs"

[[bin]]
name="is_seqnum_sv"
path="src/sockets/is_seqnum_sv.rs"

[[bin]]
name="is_seqnum_cl"
path="src/sockets/is_seqnum_cl.rs"